--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "element-plus": "^2.8.7",
     "pinia": "^2.2.4",
     "swiper": "^11.1.14",
-    "vant": "^4.9.8",
+    "vant": "^4.9.20",
     "vue": "^3.5.12",
     "vue-clipboard3": "^2.0.0",
-    "vue-i18n": "^10.0.4",
+    "vue-i18n": "^10.0.7",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.16.11",
     "@vant/auto-import-resolver": "^1.2.1",
